--- a/moduler/Faktura/css/template.css
+++ b/moduler/Faktura/css/template.css
@@ -22,7 +22,31 @@
 }
 
 .timer {
+	display: grid;
+	grid-template-columns: 2fr 1fr 3fr 5fr;
 	grid-area: timer;
+	grid-template-areas: 
+	"invHours . hoursOpt ."
+	"invType . invTypeOpt ."
+}
+
+
+#invHours {
+	padding-top: 20px;
+	grid-area: invHours;
+}
+
+ #invType {
+	 grid-area: invType;
+ }
+
+ #hoursOpt {
+	 padding-top: 20px;
+	 grid-area: hoursOpt;
+ }
+
+#invTypeOpt {
+	grid-area: invTypeOpt;
 }
 
 .udgifter {
@@ -112,4 +136,36 @@
 
 	grid-gap: 5px;
 }
+
+   .btnText {
+        text-align: left !important;
+    }
+
+    .btnCheck {
+        color: green;
+    }
+
+    #collapse1 {
+        padding-top: 15px;
+        padding-bottom: 20px;
+    }
+
+    #date {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
+    .grid {
+        background-color: white;
+    }
+
+    #invType {
+        padding-left: 50px;
+        padding-top: 20px;
+    }
+
+    #invTypeOpt {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
 }
