Faktura header done

--- a/moduler/Faktura/css/faktura_header.css
+++ b/moduler/Faktura/css/faktura_header.css
@@ -1,9 +1,9 @@
 .grid {
 	display: grid;
-	grid-template-columns: 2fr 3fr 2fr 2fr;
-	grid-gap: 2px 0px;
+	grid-template-columns: 2fr 4fr 4fr 2fr;
 	grid-template-areas: 
-	". po-date info .";
+	". info payment ."
+	". po-date payment .";
 }
 
 .po-date {
@@ -12,11 +12,40 @@
 
 .info {
 	grid-area: info;
+	
 }
+
 .tax {
 	grid-area: tax;
+}
+
+.payment {
+	grid-area: payment;
+	align-self: end;
+}
+
+.discount {
+	grid-area: discount;
+
+}
+
+.currency {
+	grid-area: currency;
 }
 
 .check-mark {
 	color: green;
 }
+
+.address-template {
+	grid-area: address-template;
+}
+
+.form-control {
+	width: 60%;
+}
+
+.bootstrap-select {
+	width: 60% !important;
+}
+
