--- a/moduler/Faktura/css/faktura_lines.css
+++ b/moduler/Faktura/css/faktura_lines.css
@@ -1,31 +1,46 @@
 .grid {
    display: grid;
    grid-template-columns: 2fr 4fr 2fr;
-   border: 2px solid red;
    
 }
 
-.wrapper {
-    
-    
-    display: grid;
-    grid-template-columns: 1fr 4fr 1fr 1fr 1fr;
-    border: 2px solid black;
-    grid-area: wrapper;
-    grid-column: 2/3;
-    grid-auto-flow: row;
-    
+.lines-header {
+    background: #eee;
+}
 
+.invoice-lines {
+    grid-column: 2/3;
 }
 
 .lines {
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr 1fr 1fr;
-    
-    border: 2px solid green;
-    grid-area: lines;
+    grid-template-columns: 1fr 4fr 1fr 1fr 1fr;    
     grid-column: 2/3;
 }
+
+.btn-size {
+    width:  80%;
+    height: 40%;      
+}
+
+.btn-add-size {
+    width: 10%;
+}
+
+.btn-add {
+    grid-column:    2/3;
+    grid-row: end;
+}
+
+.input-size {
+    width: 85%;
+}
+
+.input-description {
+    width: 95%;
+}
+
+
 /*
 .line-rows {
     grid-column: 2/3;
