--- a/moduler/Faktura/css/template.css
+++ b/moduler/Faktura/css/template.css
@@ -1,14 +1,9 @@
-.grid {
-	display: grid;	
-	grid-template-columns: 6fr 2fr;	
-	grid-template-areas: 
-	"nav"
-	"kunde"
-	"timer"
-	"udgifter"
-	"indhold"
-	"footer";
+/* css grid layout*/
 
+.grid {
+	display: grid;
+	grid-template-columns: 1fr 2fr 1fr;
+	grid-template-areas: "nav nav nav" ". kunde ." ". hours ." ". expences ." ". indhold ." "footer footer footer";
 	border: 2px solid black;
 	grid-gap: 10px;
 }
@@ -21,37 +16,35 @@
 	grid-area: kunde;
 }
 
-.timer {
+.hours {
 	display: grid;
-	grid-template-columns: 2fr 1fr 3fr 5fr;
-	grid-area: timer;
-	grid-template-areas: 
-	"invHours . hoursOpt ."
-	"invType . invTypeOpt ."
-}
-
-
-#invHours {
-	padding-top: 20px;
-	grid-area: invHours;
-}
-
- #invType {
-	 grid-area: invType;
- }
-
- #hoursOpt {
-	 padding-top: 20px;
-	 grid-area: hoursOpt;
- }
-
-#invTypeOpt {
-	grid-area: invTypeOpt;
-}
-
-.udgifter {
-	grid-area: udgifter;
+	grid-area: hours;
+	/* nyt */
+	grid-template-columns: 1fr 4fr;
+	grid-column-gap: 10px;
 	grid-row-gap: 15px;
+	grid-template-areas: "invHours hoursOpt" "invType invTypeOpt";
+	padding-left: 10px;
+	/* grid-template-columns: 2fr 1fr 3fr 5fr;
+	grid-template-areas: "invHours . hoursOpt ." "invType . invTypeOpt ."  */
+}
+
+.hours > div {
+	padding: 5px;
+}
+
+.expences {
+	display: grid;
+	grid-area: expences;
+	grid-template-columns: 1fr 4fr;
+	grid-column-gap: 10px;
+	grid-row-gap: 15px;
+	grid-template-areas: "1r1c 1r2c" "2r1c 2r2c" "3r1c 3r2c";
+	padding-left: 10px;
+}
+
+.expences > div {
+	padding: 5px;
 }
 
 .indhold {
@@ -74,12 +67,73 @@
 	grid-area: footer;
 }
 
+
+/* Style fælles */
+
+.btn-text {
+	text-align: left !important;
+}
+
+.btn-style {
+	width: 70%;
+}
+
+/* style timer */
+
+.btn-check {
+	color: green;
+}
+
+/* hours layout */
+#date {
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+
+/* hours layout slut */
+
+
+/*hours areas*/
+
+#invHours {
+	grid-area: invHours;
+	/* nyt */
+	text-align: right;
+	/* padding-top: 20px; */
+}
+
+#invType {
+	grid-area: invType;
+	/* nyt */
+	text-align: right;
+	/* padding-left: 50px;
+	padding-top: 20px; */
+}
+
+#hoursOpt {
+	grid-area: hoursOpt;
+	/* padding-top: 20px; */
+}
+
+#invTypeOpt {
+	grid-area: invTypeOpt;
+	/* padding-top: 20px;
+	padding-bottom: 20px; */
+}
+
+
+/*hours areas slut*/
+
+
+/* grid div + subgrid + subgrid div */
+
 .grid > div {
 	border: solid black;
 }
 
 .grid > div:nth-child(odd) {
-	background: #eee; 
+	background: #eee;
 }
 
 .grid > div:nth-child(even) {
@@ -88,12 +142,7 @@
 
 .subgrid {
 	display: grid;
-	grid-template-areas: 
-	"."
-	"header"
-	"linier"
-	"note";
-
+	grid-template-areas: "." "header" "linier" "note";
 	grid-gap: 5px;
 }
 
@@ -102,100 +151,16 @@
 }
 
 .subgrid > div:nth-child(odd) {
-	background: #bbb; 
+	background: #bbb;
 }
 
 .subgrid > div:nth-child(even) {
 	background: #ccc;
 }
 
-@media screen and (min-width: 736px) {
-	.grid {
-	display: grid;	
-	grid-template-columns: 1fr 10fr 1fr;
-
-	grid-template-areas: 
-	"nav nav nav"
-	". kunde ."
-	". timer ."
-	". udgifter ."
-	". indhold ."
-	"footer footer footer";
-
-	border: 2px solid black;
-	grid-gap: 10px;
-}
-
 .subgrid {
 	display: grid;
 	grid-template-columns: 1fr 10fr 1fr;
-	grid-template-areas: 
-	". . ."
-	". header ."
-	". linier ."
-	". note. ";
-
+	grid-template-areas: ". . ." ". header ." ". linier ." ". note. ";
 	grid-gap: 5px;
-}
-
-   .btnText {
-        text-align: left !important;
-    }
-
-    .btnCheck {
-        color: green;
-    }
-
-    #collapse1 {
-        padding-top: 15px;
-        padding-bottom: 20px;
-    }
-
-    #date {
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
-
-    .grid {
-        background-color: white;
-    }
-
-    #invType {
-        padding-left: 50px;
-        padding-top: 20px;
-    }
-
-    #invTypeOpt {
-        padding-top: 20px;
-        padding-bottom: 20px;
-	}
-	
-	/* CSS for udgifter */
-		.grid-expence {
-            display: grid;
-            grid-template-columns: 1fr 4fr;
-            grid-column-gap: 10px;
-        }
-
-        .grid-coll-expence {
-            display: grid;
-            grid-template-columns: 1fr 4fr;
-            grid-column-gap: 10px;
-            grid-row-gap: 15px;
-        }
-
-        .div-padding {
-            padding: 5px;
-        }
-
-        .btn-text {
-            text-align: left !important;
-        }
-
-        .btn-style {
-            width: 75%;
-        }
-	/* CSS for udgifter END */
-
-
 }
