--- a/moduler/Faktura/css/faktura_lines.css
+++ b/moduler/Faktura/css/faktura_lines.css
@@ -16,11 +16,12 @@
     display: grid;
     grid-template-columns: 1fr 4fr 1fr 1fr 1fr;    
     grid-column: 2/3;
+    grid-column-gap: 1.5vw;
+    text-align: center;
 }
 
 .btn-size {
-    width:  80%;
-    height: 40%;      
+    width:  90%;      
 }
 
 .btn-add-size {
@@ -33,7 +34,8 @@
 }
 
 .input-size {
-    width: 85%;
+    width: 80%;
+    margin-left: 15%;
 }
 
 .input-description {
